--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formulario-app",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -24,7 +24,8 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
