--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "sorteio": "cp -r dist/formulario-app/* ../sorteio/",
+    "participants": "cp -r dist/formulario-app/* ../participants/"
   },
   "private": true,
   "dependencies": {
